[gd_scene load_steps=5 format=3 uid="uid://c42mh74d7l2rt"]

[ext_resource type="Script" path="res://addons/ggs/editor/pref_window/pref_window.gd" id="1_ihv6i"]
[ext_resource type="Texture2D" uid="uid://badl61ealw70o" path="res://addons/ggs/assets/file_dialog.svg" id="2_qx4su"]
[ext_resource type="Texture2D" uid="uid://bk0u7p6a1apta" path="res://addons/ggs/assets/icon_mini.svg" id="3_ggsp5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ki5am"]

[node name="PrefWindow" type="Window"]
title = "GGS Preferences"
position = Vector2i(0, 36)
size = Vector2i(650, 500)
visible = false
wrap_controls = true
exclusive = true
min_size = Vector2i(650, 500)
script = ExtResource("1_ihv6i")
reset_text = "Are you sure you want to reset settings?
A plugin restart is required and the plugin will be disabled automatically if confirmed."
ok_text = "Confirm changes?
A plugin restart is required and the plugin will be disabled automatically if confirmed."

[node name="BgPanel" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"PrefWindowBG"

[node name="Margin" type="MarginContainer" parent="BgPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MainCtnr" type="VBoxContainer" parent="BgPanel/Margin"]
layout_mode = 2

[node name="ScrollCtnr" type="ScrollContainer" parent="BgPanel/Margin/MainCtnr"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="SettingsCtnr" type="VBoxContainer" parent="BgPanel/Margin/MainCtnr/ScrollCtnr"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DirectoriesSection" type="VBoxContainer" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="SectionLabel" type="Label" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection"]
layout_mode = 2
text = "Directories"
horizontal_alignment = 1

[node name="HSep" type="HSeparator" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection"]
layout_mode = 2

[node name="SettingsDir" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection"]
layout_mode = 2

[node name="SettingDirLabel" type="Label" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/SettingsDir"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Settings:"

[node name="SettingDirField" type="LineEdit" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/SettingsDir"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
caret_blink_interval = 0.5

[node name="SettingDirBtn" type="Button" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/SettingsDir"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_qx4su")

[node name="ComponentDir" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection"]
layout_mode = 2

[node name="CompDirLabel" type="Label" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/ComponentDir"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Components:"

[node name="CompDirField" type="LineEdit" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/ComponentDir"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
caret_blink_interval = 0.5

[node name="CompDirBtn" type="Button" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/ComponentDir"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_qx4su")

[node name="TemplatesDir" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection"]
layout_mode = 2

[node name="TemplatesDirLabel" type="Label" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/TemplatesDir"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Templates:"

[node name="TemplatesDirField" type="LineEdit" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/TemplatesDir"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
caret_blink_interval = 0.5

[node name="TemplatesDirBtn" type="Button" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/TemplatesDir"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_qx4su")

[node name="SaveFileDir" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection"]
layout_mode = 2
size_flags_vertical = 8

[node name="SaveFileDirLabel" type="Label" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/SaveFileDir"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Save File:"

[node name="HBox" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/SaveFileDir"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveFileBaseDirLabel" type="Label" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/SaveFileDir/HBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "user://"

[node name="SaveFileNameField" type="LineEdit" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/SaveFileDir/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "file_name"

[node name="SaveFileDotLabel" type="Label" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/SaveFileDir/HBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "."

[node name="SaveFileExtensionField" type="LineEdit" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/DirectoriesSection/SaveFileDir/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "extension"

[node name="ComponentsSection" type="VBoxContainer" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr"]
layout_mode = 2

[node name="HSep0" type="HSeparator" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/ComponentsSection"]
layout_mode = 2

[node name="SectionLabel" type="Label" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/ComponentsSection"]
layout_mode = 2
text = "Components"
horizontal_alignment = 1

[node name="HSep1" type="HSeparator" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/ComponentsSection"]
layout_mode = 2

[node name="ApplyOnChanged" type="CheckBox" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/ComponentsSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Set apply_on_changed to true by default."

[node name="GrabFocusOnMouseOver" type="CheckBox" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/ComponentsSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Set grab_focus_on_mouse_over to true by default."

[node name="SetSFXBtn" type="Button" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/ComponentsSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Set Component Sound Effects"

[node name="MiscSection" type="VBoxContainer" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr"]
layout_mode = 2
size_flags_vertical = 0

[node name="HSep" type="HSeparator" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/MiscSection"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/MiscSection"]
layout_mode = 2

[node name="UpdateThemeBtn" type="Button" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/MiscSection/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Update the GGS editor theme to match your current Godot editor theme."
text = "Update Theme"

[node name="BaseTemplateBtn" type="Button" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/MiscSection/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Edit Base Template"

[node name="ResetBtn" type="Button" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr/MiscSection/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
text = "Reset"

[node name="HSep" type="HSeparator" parent="BgPanel/Margin/MainCtnr/ScrollCtnr/SettingsCtnr"]
layout_mode = 2

[node name="FooterCtnr" type="VBoxContainer" parent="BgPanel/Margin/MainCtnr"]
layout_mode = 2
size_flags_vertical = 8

[node name="HSep0" type="HSeparator" parent="BgPanel/Margin/MainCtnr/FooterCtnr"]
layout_mode = 2

[node name="DisclaimerLabel" type="Label" parent="BgPanel/Margin/MainCtnr/FooterCtnr"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_ki5am")
text = "â€» All changes take effect after a plugin restart."

[node name="HSep1" type="HSeparator" parent="BgPanel/Margin/MainCtnr/FooterCtnr"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr/FooterCtnr"]
layout_mode = 2

[node name="InfoCtnr" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr/FooterCtnr/HBox"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 2

[node name="PluginInfo" type="Button" parent="BgPanel/Margin/MainCtnr/FooterCtnr/HBox/InfoCtnr"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 2
theme_override_constants/h_separation = 5
text = "Godot Game Settings"
icon = ExtResource("3_ggsp5")
flat = true
alignment = 0

[node name="VersionBtn" type="Button" parent="BgPanel/Margin/MainCtnr/FooterCtnr/HBox/InfoCtnr"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "View Release"
text = "3.1.0"

[node name="ChangelogBtn" type="Button" parent="BgPanel/Margin/MainCtnr/FooterCtnr/HBox/InfoCtnr"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "View Changelog"
text = "Changelog"

[node name="BtnCtnr" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr/FooterCtnr/HBox"]
layout_mode = 2
size_flags_horizontal = 10

[node name="OkBtn" type="Button" parent="BgPanel/Margin/MainCtnr/FooterCtnr/HBox/BtnCtnr"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "OK"

[node name="CancelBtn" type="Button" parent="BgPanel/Margin/MainCtnr/FooterCtnr/HBox/BtnCtnr"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "Cancel
"

[node name="DirSelectionWindow" type="FileDialog" parent="."]
title = "Open a Directory"
size = Vector2i(600, 500)
min_size = Vector2i(600, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
metadata/target = 0

[node name="ConfirmWindow" type="ConfirmationDialog" parent="."]
size = Vector2i(497, 135)
metadata/purpose = 0
